--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 
     <!-- New "Hard Mode" button -->
     <a id="hard-mode-button" href="/hard mode.html">
-        Hard Mode
+        Hard Mode [Soon]
         <img src="hardmode.png" alt="Hard Mode Icon">
     </a>
 
